@@ -46,24 +46,27 @@ def test_acl_file_miss(run_simrbl, acl_file, entry):
     assert res.stdout == 'not found\n'
 
 
-def test_acl_file_ip(run_simrbl, acl_file):
-    res = run_simrbl(['-f', acl_file, '127.0.0.2'])
+@pytest.mark.parametrize('entry', [
+    {'ip': '127.0.0.2', 'msg': 'local policy'},
+    {'ip': '127.0.0.3', 'msg': 'bar'},
+    {'ip': '127.0.0.4', 'msg': 'bar', 'result': 'foo'},
+    {'ip': '127.0.1.1', 'msg': 'baz', 'result': '127.0.1.0'},
+    {'ip': '127.0.1.254', 'msg': 'baz', 'result': '127.0.1.0'},
+    {'ip': '127.0.2.1', 'msg': 'local policy'},
+])
+def test_acl_file_ip(run_simrbl, acl_file, entry):
+    res = run_simrbl(['-f', acl_file, entry['ip']])
     assert res.returncode == 1
-    assert res.stdout.startswith('127.0.0.2 found in ')
-    assert res.stdout.endswith(' 127.0.0.2 (local policy)\n')
-
-    res = run_simrbl(['-f', acl_file, '127.0.0.3'])
-    assert res.returncode == 1
-    assert res.stdout.startswith('127.0.0.3 found in ')
-    assert res.stdout.endswith(' 127.0.0.3 (bar)\n')
-
-    res = run_simrbl(['-f', acl_file, '127.0.0.4'])
-    assert res.returncode == 1
-    assert res.stdout.startswith('127.0.0.4 found in ')
-    assert res.stdout.endswith(' foo (bar)\n')
+    assert res.stdout.startswith(f'{entry["ip"]} found in ')
+    assert res.stdout.endswith(f' {entry.get("result", entry["ip"])} ({entry["msg"]})\n')
 
 
-def test_acl_file_ip_miss(run_simrbl, acl_file):
-    res = run_simrbl(['-f', acl_file, '127.0.0.1'])
+@pytest.mark.parametrize('entry', [
+    '127.0.0.1',
+    '127.0.2.2',
+    '127.0.3.1',
+])
+def test_acl_file_ip_miss(run_simrbl, acl_file, entry):
+    res = run_simrbl(['-f', acl_file, entry])
     assert res.returncode == 0
     assert res.stdout == 'not found\n'
